[package]
name = "server"
version = "0.1.0"
authors = ["刘荣飞 <liurongfei@dot2.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd="0.3"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"